[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scenes/Ally/ShooterAlly/ShooterAllyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/Ally/ShooterAlly/ArcherAlly/ArcherAlly.gd" type="Script" id=2]

[node name="Ally" instance=ExtResource( 1 )]
script = ExtResource( 2 )
type = 1

[node name="Sprite" parent="." index="1"]
modulate = Color( 0.72, 2.64, 0.42, 1 )

[node name="ShotCooldown" parent="." index="6"]
wait_time = 2.0

[node name="MoveCooldown" parent="." index="7"]
wait_time = 1.0

[node name="RapidCooldown" type="Timer" parent="." index="8"]
wait_time = 0.2

[connection signal="timeout" from="RapidCooldown" to="." method="_on_RapidCooldown_timeout"]
